Deprecate \c_minus_one at the end of 2018 (fixes #316)
This commit also removes a variable that could have been removed in my
last commit (it compensates for the additional count used by \c_iow_log,
reducing the number of testfile diffs).

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -1216,7 +1216,7 @@
 %   file only (\cs{c_log_iow}) and to both the terminal and
 %   transcript file (\cs{c_term_iow}).
 %    \begin{macrocode}
-\cs_new_eq:NN \c_log_iow  \c_minus_one
+\int_const:Nn \c_log_iow  { -1 }
 \int_const:Nn \c_term_iow { 128 }
 %    \end{macrocode}
 % \end{variable}
@@ -1490,12 +1490,11 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\l_@@_line_target_int, \l_@@_target_int}
+% \begin{variable}{\l_@@_line_target_int}
 %   This stores the target line count: the full number of characters
 %   in a line, minus any part for a leader at the start of each line.
 %    \begin{macrocode}
 \int_new:N \l_@@_line_target_int
-\int_new:N \l_@@_target_int
 %    \end{macrocode}
 % \end{variable}
 %
