--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -781,7 +781,6 @@
 %
 % \begin{variable}
 %   {
-%     \c_minus_one              ,
 %     \c_zero                   ,
 %     \c_one                    ,
 %     \c_two                    ,
@@ -805,7 +804,7 @@
 %     \c_two_hundred_fifty_six  ,
 %     \c_one_thousand           ,
 %     \c_ten_thousand
-% }
+%   }
 %   Integer values used with primitive tests and assignments:
 %   self-terminating nature makes these more convenient and faster than
 %   literal numbers.
@@ -2390,19 +2389,6 @@
 %    \end{macrocode}
 % \end{variable}
 %
-% \begin{variable}{\c_minus_one}
-%   The actual allocation mechanism is in \pkg{l3alloc}; it requires
-%   \cs{c_one} to be defined.  In package mode, reuse \tn{m@ne}.
-%    \begin{macrocode}
-%<*package>
-\cs_new_eq:NN \c_minus_one \m@ne
-%</package>
-%<*initex>
-\int_const:Nn \c_minus_one { -1 }
-%</initex>
-%    \end{macrocode}
-% \end{variable}
-%
 % \begin{variable}{\c_thirty_two}
 %   One middling value.
 %    \begin{macrocode}
@@ -2467,6 +2453,21 @@
 \int_new:N \g_tmpb_int
 %    \end{macrocode}
 % \end{variable}
+% \end{variable}
+%
+% \subsection{Deprecated}
+%
+% \begin{variable}[deprecated = 2018-12-31]{\c_minus_one}
+%   The actual allocation mechanism is in \pkg{l3alloc}; it requires
+%   \cs{c_one} to be defined.  In package mode, reuse \tn{m@ne}.
+%    \begin{macrocode}
+%<*package>
+\cs_new_eq:NN \c_minus_one \m@ne
+%</package>
+%<*initex>
+\int_const:Nn \c_minus_one { -1 }
+%</initex>
+%    \end{macrocode}
 % \end{variable}
 %
 %    \begin{macrocode}
