--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -934,7 +934,8 @@
 %   operation is right associative, hence \texttt{2 ** 2 ** 3} equals
 %   $2^{2^{3}} = 256$.  The \enquote{invalid operation} exception occurs
 %   if \meta{operand_1} is negative or $-0$, and \meta{operand_2} is not
-%   an integer, unless the result is zero (in that case, the sign is
+%   of the form $p/q$ with $p$ integer and $q$ odd,
+%   unless the result is zero (in that case, the sign is
 %   chosen arbitrarily to be $+0$).  \enquote{Division by zero} occurs
 %   when raising $\pm 0$ to a strictly negative power.
 %   \enquote{Underflow} and \enquote{overflow} occur when appropriate.
