Infinity is actually even (fixes #272)
I finally understood why the standard defines (-1)^inf = (-1)^-inf = 1:
all large floating point numbers are even integers.  It is now
implemented correctly in l3fp.

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -932,11 +932,13 @@
 %   \end{syntax}
 %   Raises \meta{operand_1} to the power \meta{operand_2}.  This
 %   operation is right associative, hence \texttt{2 ** 2 ** 3} equals
-%   $2^{2^{3}} = 256$.  The \enquote{invalid operation} exception occurs
-%   if \meta{operand_1} is negative or $-0$, and \meta{operand_2} is not
-%   of the form $p/q$ with $p$ integer and $q$ odd,
-%   unless the result is zero (in that case, the sign is
-%   chosen arbitrarily to be $+0$).  \enquote{Division by zero} occurs
+%   $2^{2^{3}} = 256$.  If \meta{operand_1} is negative or $-0$ then:
+%   the result's sign is $+$ if the \meta{operand_2} is infinite and
+%   $(-1)^p$ if the \meta{operand_2} is $p/q$ with $p$ integer and $q$
+%   odd; the result is $+0$ if
+%   |abs(|\meta{operand_1}|)^|\meta{operand_2} evaluates to zero; in
+%   other cases the \enquote{invalid operation} exception occurs because
+%   the sign cannot be determined.  \enquote{Division by zero} occurs
 %   when raising $\pm 0$ to a finite strictly negative power.
 %   \enquote{Underflow} and \enquote{overflow} occur when appropriate.
 % \end{function}
