Document behaviour of a date-comparison auxiliary

--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1165,6 +1165,9 @@ Do not distribute a modified version of this file.
 %
 % \begin{macro}[int, pTF]{\@@_date_compare:nNn}
 % \begin{macro}[aux]{\@@_date_compare_aux:nnnNnnn, \@@_date_compare_aux:w}
+%   Expects |#1| and |#3| to be dates in the format YYYY-MM-DD (but
+%   accepts YYYY or YYYY-MM too).  Compares them using |#2| (one of |<|,
+%   |=|, |>|), filling in zeros for missing data.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \@@_date_compare:nNn #1#2#3 { TF , T , F , p }
   { \@@_date_compare_aux:w #1--- \q_mark #2 #3--- \q_stop }
@@ -2153,6 +2156,8 @@ Do not distribute a modified version of this file.
 %    \end{macrocode}
 %
 % \begin{macro}[aux]{\@@_deprecated_on:n}
+%   The date comparison function expects two dates in the YYYY-MM-DD
+%   format (|-|~is not subtraction here).
 %   Complain if a deprecated function should have been removed earlier.
 %   In any case, mark it as internal to suppress the text
 %   \enquote{documented on page \ldots{}}.
