--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -2111,6 +2111,8 @@
 % \end{macro}
 %
 % \begin{macro}[aux, EXP]{\@@_parse_word_round:N, \@@_parse_round:Nw}
+% \begin{macro}[aux, deprecated = 2017-12-31]{round+, round0, round-}
+%   This looks for |+|, |-|, |0| after |round|.  That syntax is deprecated.
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_word_round:N #1#2
   {
@@ -2132,6 +2134,7 @@
 \cs_new:Npn \@@_parse_round:Nw
     #1 #2 \@@_round_to_nearest:NNN #3#4 { #2 #1 #3 }
 %    \end{macrocode}
+% \end{macro}
 % \end{macro}
 %
 % \subsection{Main functions}
