Change most uses of || or && to bool_lazy functions (see #217)

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1251,11 +1251,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_par_update_cutout:
   {
-    \bool_if:nF
-      {
-           \seq_if_empty_p:N \g_@@_cutout_left_seq
-        && \seq_if_empty_p:N \g_@@_cutout_right_seq
-      }
+    \bool_lazy_and:nnF
+      { \seq_if_empty_p:N \g_@@_cutout_left_seq }
+      { \seq_if_empty_p:N \g_@@_cutout_right_seq }
       {
         \prg_replicate:nn \tex_prevgraf:D
           {
@@ -1266,11 +1264,9 @@
       }
     \int_compare:nNnT \l_@@_group_level_int = \etex_currentgrouplevel:D
       {
-        \bool_if:nT
-          {
-               \seq_if_empty_p:N \g_@@_cutout_left_seq
-            && \seq_if_empty_p:N \g_@@_cutout_right_seq
-          }
+        \bool_lazy_and:nnT
+          { \seq_if_empty_p:N \g_@@_cutout_left_seq }
+          { \seq_if_empty_p:N \g_@@_cutout_right_seq }
           { \bool_gset_false:N \g_@@_cutout_active_bool }
       }
   }
@@ -1833,11 +1829,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_parshape_set_margins:
   {
-    \bool_if:nTF
-      {
-           \dim_compare_p:nNn \l_galley_total_left_margin_dim  = \c_zero_dim
-        && \dim_compare_p:nNn \l_galley_total_right_margin_dim = \c_zero_dim
-      }
+    \bool_lazy_and:nnTF
+      { \dim_compare_p:nNn \l_galley_total_left_margin_dim  = \c_zero_dim }
+      { \dim_compare_p:nNn \l_galley_total_right_margin_dim = \c_zero_dim }
       { \tex_parshape:D \c_zero }
       {
         \tex_parshape:D
@@ -1855,11 +1849,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_parshape_set_indents:
   {
-    \bool_if:nF
-      {
-           \seq_if_empty_p:N \l_@@_parshape_left_indent_seq
-        && \seq_if_empty_p:N \l_@@_parshape_right_indent_seq
-      }
+    \bool_lazy_and:nnF
+      { \seq_if_empty_p:N \l_@@_parshape_left_indent_seq }
+      { \seq_if_empty_p:N \l_@@_parshape_right_indent_seq }
       {
         \@@_parshape_set_indents:NN
           \l_@@_parshape_left_indent_seq
@@ -1896,11 +1888,9 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_parshape_set_cutouts:
   {
-    \bool_if:nF
-      {
-           \seq_if_empty_p:N \g_@@_cutout_left_seq
-        && \seq_if_empty_p:N \g_@@_cutout_right_seq
-      }
+    \bool_lazy_and:nnF
+      { \seq_if_empty_p:N \g_@@_cutout_left_seq }
+      { \seq_if_empty_p:N \g_@@_cutout_right_seq }
       {
         \@@_parshape_set_cutouts:n { left }
         \@@_parshape_set_cutouts:n { right }
