--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1714,11 +1714,9 @@
   \sys_if_engine_xetex:TF
     { xdvipdfmx }
     {
-      \bool_if:nTF
-        {
-             \cs_if_exist_p:N  \pdftex_pdfoutput:D
-          && \int_compare_p:nNn \pdftex_pdfoutput:D > \c_zero
-        }
+      \bool_lazy_and:nnTF
+        { \cs_if_exist_p:N  \pdftex_pdfoutput:D }
+        { \int_compare_p:nNn \pdftex_pdfoutput:D > \c_zero }
         { pdfmode }
         { dvips }
     }
