--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -3640,11 +3640,11 @@
   {
     \token_if_expandable:NTF #1
       {
-        \bool_if:nTF
+        \bool_lazy_any:nTF
           {
-               \token_if_protected_macro_p:N      #1
-            || \token_if_protected_long_macro_p:N #1
-            || \token_if_eq_meaning_p:NN \q_recursion_tail #1
+            { \token_if_eq_meaning_p:NN \q_recursion_tail #1 }
+            { \token_if_protected_macro_p:N      #1 }
+            { \token_if_protected_long_macro_p:N #1 }
           }
           { \use_ii:nn }
           { \use_i:nn }
@@ -3786,11 +3786,9 @@
               #2 \q_recursion_stop
           }
           {
-            \bool_if:nTF
-              {
-                   \token_if_cs_p:N #1
-                || ! ( \int_compare_p:nNn { `#1 } = { "0307 } )
-              }
+            \bool_lazy_or:nnTF
+              { \token_if_cs_p:N #1 }
+              { ! \int_compare_p:nNn { `#1 } = { "0307 } }
               { \@@_change_case_output:Vwn \c__unicode_dotless_i_tl }
               {
                 \@@_change_case_output:nwn { i }
@@ -3923,15 +3921,15 @@
           #3 \q_recursion_stop
       }
       {
-        \bool_if:nT
+        \bool_lazy_and:nnT
+          { ! \token_if_cs_p:N #2 }
           {
-            ! \token_if_cs_p:N #2
-            &&
-              (
-                   \int_compare_p:nNn { `#2 } = { "0300 }
-                || \int_compare_p:nNn { `#2 } = { "0301 }
-                || \int_compare_p:nNn { `#2 } = { "0303 }
-              )
+            \bool_lazy_any_p:n
+              {
+                { \int_compare_p:nNn { `#2 } = { "0300 } }
+                { \int_compare_p:nNn { `#2 } = { "0301 } }
+                { \int_compare_p:nNn { `#2 } = { "0303 } }
+              }
           }
           { \@@_change_case_output:Vwn \c__unicode_dot_above_tl }
         #1 #2#3 \q_recursion_stop
@@ -3978,11 +3976,9 @@
           #3 \q_recursion_stop
       }
       {
-        \bool_if:nTF
-          {
-               ! \token_if_cs_p:N #2
-            && \int_compare_p:nNn { `#2 } = { "0307 }
-          }
+        \bool_lazy_and:nnTF
+          { ! \token_if_cs_p:N #2 }
+          { \int_compare_p:nNn { `#2 } = { "0307 } }
           { #1 }
           { #1 #2 }
         #3 \q_recursion_stop
@@ -4559,11 +4555,9 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_change_case_mixed_nl:Nnw #1
   {
-    \bool_if:nTF
-      {
-           \int_compare_p:nNn { `#1 } = { `i }
-        || \int_compare_p:nNn { `#1 } = { `I }
-      }
+    \bool_lazy_or:nnTF
+      { \int_compare_p:nNn { `#1 } = { `i } }
+      { \int_compare_p:nNn { `#1 } = { `I } }
       {
         \@@_change_case_output:nwn { I }
         \@@_change_case_mixed_nl:Nw
@@ -4583,14 +4577,12 @@
           #3 \q_recursion_stop
       }
       {
-        \bool_if:nTF
+        \bool_lazy_and:nnTF
+          { ! ( \token_if_cs_p:N #2 ) }
           {
-            ! ( \token_if_cs_p:N #2 )
-            &&
-              (
-                   \int_compare_p:nNn { `#2 } = { `j }
-                || \int_compare_p:nNn { `#2 } = { `J }
-              )
+            \bool_lazy_or_p:nn
+              { \int_compare_p:nNn { `#2 } = { `j } }
+              { \int_compare_p:nNn { `#2 } = { `J } }
           }
           {
             \@@_change_case_output:nwn { J }
