--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -493,6 +493,15 @@
 %     \IfNoValueTF{-NoValue-}
 %   \end{verbatim}
 %   will be logically \texttt{false}.
+%
+%   When two optional arguments follow each other (a syntax we typically
+%   discourage), it can make sense to allow users of the command to
+%   specify only the second argument by providing an empty first
+%   argument.  Rather than testing separately for emptyness and for
+%   |-NoValue-| it is then best to use the argument type~|O| with an
+%   empty default value, and simply test for emptyness using the
+%   \pkg{expl3} conditional \cs{tl_if_blank:nTF} or its \pkg{etoolbox}
+%   analogue \tn{ifblank}.
 % \end{function}
 %
 % \begin{function}[EXP]{\IfValueT, \IfValueF, \IfValueTF}
