--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1235,6 +1235,8 @@ Do not distribute a modified version of this file.
   }
 \msg_new:nnn { l3doc } { deprecated-function }
   { The~deprecated~function(s)~'#1'~should~have~been~removed~on~#2. }
+\msg_new:nnn { l3doc } { date-format }
+  { The~date~'#1'~should~be~given~in~YYYY-MM-DD~format. }
 %    \end{macrocode}
 %
 % \subsection{Options and configuration}
@@ -2140,8 +2142,8 @@ Do not distribute a modified version of this file.
         \bool_set_true:N \l_@@_macro_noTF_bool
         \bool_set_true:N \l_@@_macro_TF_bool
       } ,
-    added .tl_set:N = \l_@@_date_added_tl ,
-    updated .tl_set:N = \l_@@_date_updated_tl ,
+    added .code:n = { \@@_date_set:Nn \l_@@_date_added_tl {#1} },
+    updated .code:n = { \@@_date_set:Nn \l_@@_date_updated_tl {#1} } ,
     deprecated .code:n = { \@@_deprecated_on:n {#1} } ,
     tested .code:n = { } ,
     label .code:n =
@@ -2154,6 +2156,19 @@ Do not distribute a modified version of this file.
     module .tl_set:N = \l_@@_override_module_tl ,
   }
 %    \end{macrocode}
+%
+% \begin{macro}[aux]{\@@_date_set:Nn}
+%   Minimal check that the date is not given in the YYYY/MM/DD format.
+%   Eventually we should check the input more carefully.
+%    \begin{macrocode}
+\cs_new_protected:Npn \@@_date_set:Nn #1#2
+  {
+    \tl_if_in:nnT {#2} { / }
+      { \msg_error:nnn { l3doc } { date-format } {#2} }
+    \tl_set:Nn #1 {#2}
+  }
+%    \end{macrocode}
+% \end{macro}
 %
 % \begin{macro}[aux]{\@@_deprecated_on:n}
 %   The date comparison function expects two dates in the YYYY-MM-DD
