--- a/l3experimental/l3str/l3flag.dtx
+++ b/l3experimental/l3str/l3flag.dtx
@@ -257,7 +257,10 @@
 %   auxiliaries.
 %    \begin{macrocode}
 \cs_new_protected:Npn \flag_show:n #1
-  { \__msg_show_wrap:n { > ~ flag ~ #1 ~ height = \flag_height:n {#1} } }
+  {
+    \exp_args:Nc \__msg_show_variable:NNNnn { flag~#1 } \cs_if_exist:NTF ? { }
+      { > ~ flag ~ #1 ~ height = \flag_height:n {#1} }
+  }
 \cs_new_protected:Npn \flag_log:n
   { \__msg_log_next: \flag_show:n }
 %    \end{macrocode}
