Move _log functions from l3candidates to appropriate modules
These functions have been around for >2 years and we use them all
over the place in our tests.  The name seems fairly uncontroversial.
I haven't included \iow_log_stream: (and \ior_log_stream:) because
their names are more doubtful.

--- a/l3kernel/l3coffins.dtx
+++ b/l3kernel/l3coffins.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3coffins.dtx Copyright(C) 2010-2016 The LaTeX3 Project
+%% File: l3coffins.dtx Copyright(C) 2010-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -307,6 +307,16 @@
 %   vector denoting the direction of the pole. It is the ratio between
 %   the later, rather than the absolute values, which determines the
 %   direction of the pole.
+% \end{function}
+%
+% \begin{function}[added = 2014-08-22, updated = 2015-08-01]
+%   {\coffin_log_structure:N, \coffin_log_structure:c}
+%   \begin{syntax}
+%     \cs{coffin_log_structure:N} \meta{coffin}
+%   \end{syntax}
+%   This function writes the structural information about the
+%   \meta{coffin} in the log file. See also \cs{coffin_show_structure:N}
+%   which displays the result in the terminal.
 % \end{function}
 %
 % \subsection{Constants and variables}
@@ -1676,6 +1686,15 @@
       }
   }
 \cs_generate_variant:Nn \coffin_show_structure:N { c }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\coffin_log_structure:N, \coffin_log_structure:c}
+%   Redirect output of \cs{coffin_show_structure:N} to the log.
+%    \begin{macrocode}
+\cs_new_protected:Npn \coffin_log_structure:N
+  { \__msg_log_next: \coffin_show_structure:N }
+\cs_generate_variant:Nn \coffin_log_structure:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
