--- a/l3kernel/l3fp-assign.dtx
+++ b/l3kernel/l3fp-assign.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3fp-assign.dtx Copyright (C) 2011-2016 The LaTeX3 project
+%% File: l3fp-assign.dtx Copyright (C) 2011-2017 The LaTeX3 project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -178,6 +178,17 @@
 \cs_new_protected:Npn \fp_show:n
   { \__msg_show_wrap:Nn \fp_to_tl:n }
 \cs_generate_variant:Nn \fp_show:N { c }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\fp_log:N, \fp_log:c, \fp_log:n}
+%   Redirect output of \cs{fp_show:N} and \cs{fp_show:n} to the log.
+%    \begin{macrocode}
+\cs_new_protected:Npn \fp_log:N
+  { \__msg_log_next: \fp_show:N }
+\cs_new_protected:Npn \fp_log:n
+  { \__msg_log_next: \fp_show:n }
+\cs_generate_variant:Nn \fp_log:N { c }
 %    \end{macrocode}
 % \end{macro}
 %
