--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -791,8 +791,18 @@
 %   \begin{syntax}
 %     \cs{keys_show:nn} \Arg{module} \Arg{key}
 %   \end{syntax}
-%   Shows the information associated to the \meta{key} for a \meta{module},
+%   Displays in the terminal
+%   the information associated to the \meta{key} for a \meta{module},
 %   including the function which is used to actually implement it.
+% \end{function}
+%
+% \begin{function}[added = 2014-08-22, updated = 2015-08-09]{\keys_log:nn}
+%   \begin{syntax}
+%     \cs{keys_log:nn} \Arg{module} \Arg{key}
+%   \end{syntax}
+%   Writes in the log file the information associated to the \meta{key}
+%   for a \meta{module}.  See also \cs{keys_show:nn} which displays the
+%   result in the terminal.
 % \end{function}
 %
 % \section{Low-level interface for parsing key--val lists}
@@ -2437,6 +2447,14 @@
   }
 %    \end{macrocode}
 % \end{macro}
+% \end{macro}
+%
+% \begin{macro}{\keys_log:nn}
+%   Redirect output of \cs{keys_show:nn} to the log.
+%    \begin{macrocode}
+\cs_new_protected:Npn \keys_log:nn
+  { \__msg_log_next: \keys_show:nn }
+%    \end{macrocode}
 % \end{macro}
 %
 % \subsection{Messages}
