--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 %
 %% File: l3skip.dtx Copyright (C) 2004-2011 Frank Mittelbach, The LaTeX3 Project
-%%                            (C) 2012-2016 The LaTeX3 Project
+%%                            (C) 2012-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -525,6 +525,21 @@
 %   on the terminal.
 % \end{function}
 %
+% \begin{function}[added = 2014-08-22, updated = 2015-08-03]{\dim_log:N, \dim_log:c}
+%   \begin{syntax}
+%     \cs{dim_log:N} \meta{dimension}
+%    \end{syntax}
+%   Writes the value of the \meta{dimension} in the log file.
+% \end{function}
+%
+% \begin{function}[added = 2014-08-22, updated = 2015-08-07]{\dim_log:n}
+%   \begin{syntax}
+%     \cs{dim_log:n} \Arg{dimension expression}
+%    \end{syntax}
+%   Writes the result of evaluating the \meta{dimension expression}
+%   in the log file.
+% \end{function}
+%
 % \section{Constant dimensions}
 %
 % \begin{variable}{\c_max_dim}
@@ -700,7 +715,7 @@
 %
 % \section{Viewing \texttt{skip} variables}
 %
-% \begin{function}{\skip_show:N, \skip_show:c}
+% \begin{function}[updated = 2015-08-03]{\skip_show:N, \skip_show:c}
 %   \begin{syntax}
 %     \cs{skip_show:N} \meta{skip}
 %    \end{syntax}
@@ -713,6 +728,21 @@
 %    \end{syntax}
 %   Displays the result of evaluating the \meta{skip expression}
 %   on the terminal.
+% \end{function}
+%
+% \begin{function}[added = 2014-08-22, updated = 2015-08-03]{\skip_log:N, \skip_log:c}
+%   \begin{syntax}
+%     \cs{skip_log:N} \meta{skip}
+%    \end{syntax}
+%   Writes the value of the \meta{skip} in the log file.
+% \end{function}
+%
+% \begin{function}[added = 2014-08-22, updated = 2015-08-07]{\skip_log:n}
+%   \begin{syntax}
+%     \cs{skip_log:n} \Arg{skip expression}
+%    \end{syntax}
+%   Writes the result of evaluating the \meta{skip expression}
+%   in the log file.
 % \end{function}
 %
 % \section{Constant skips}
@@ -897,7 +927,7 @@
 %
 % \section{Viewing \texttt{muskip} variables}
 %
-% \begin{function}{\muskip_show:N, \muskip_show:c}
+% \begin{function}[updated = 2015-08-03]{\muskip_show:N, \muskip_show:c}
 %   \begin{syntax}
 %     \cs{muskip_show:N} \meta{muskip}
 %    \end{syntax}
@@ -910,6 +940,21 @@
 %    \end{syntax}
 %   Displays the result of evaluating the \meta{muskip expression}
 %   on the terminal.
+% \end{function}
+%
+% \begin{function}[added = 2014-08-22, updated = 2015-08-03]{\muskip_log:N, \muskip_log:c}
+%   \begin{syntax}
+%     \cs{muskip_log:N} \meta{muskip}
+%    \end{syntax}
+%   Writes the value of the \meta{muskip} in the log file.
+% \end{function}
+%
+% \begin{function}[added = 2014-08-22, updated = 2015-08-07]{\muskip_log:n}
+%   \begin{syntax}
+%     \cs{muskip_log:n} \Arg{muskip expression}
+%    \end{syntax}
+%   Writes the result of evaluating the \meta{muskip expression}
+%   in the log file.
 % \end{function}
 %
 % \section{Constant muskips}
@@ -1492,6 +1537,16 @@
 %    \end{macrocode}
 %  \end{macro}
 %
+% \begin{macro}{\dim_log:N, \dim_log:c, \dim_log:n}
+%   Diagnostics.  Redirect output of \cs{dim_show:n} to the log.
+%    \begin{macrocode}
+\cs_new_eq:NN \dim_log:N \__kernel_register_log:N
+\cs_new_eq:NN \dim_log:c \__kernel_register_log:c
+\cs_new_protected:Npn \dim_log:n
+  { \__msg_log_next: \dim_show:n }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Constant dimensions}
 %
 % \begin{variable}{\c_zero_dim, \c_max_dim}
@@ -1734,6 +1789,16 @@
 %    \end{macrocode}
 % \end{macro}
 %
+% \begin{macro}{\skip_log:N, \skip_log:c, \skip_log:n}
+%   Diagnostics.  Redirect output of \cs{skip_show:n} to the log.
+%    \begin{macrocode}
+\cs_new_eq:NN \skip_log:N \__kernel_register_log:N
+\cs_new_eq:NN \skip_log:c \__kernel_register_log:c
+\cs_new_protected:Npn \skip_log:n
+  { \__msg_log_next: \skip_show:n }
+%    \end{macrocode}
+% \end{macro}
+%
 % \subsection{Constant skips}
 %
 % \begin{macro}{\c_zero_skip, \c_max_skip}
@@ -1921,6 +1986,16 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \muskip_show:n
   { \__msg_show_wrap:Nn \muskip_eval:n }
+%    \end{macrocode}
+% \end{macro}
+%
+% \begin{macro}{\muskip_log:N, \muskip_log:c, \muskip_log:n}
+%   Diagnostics.  Redirect output of \cs{muskip_show:n} to the log.
+%    \begin{macrocode}
+\cs_new_eq:NN \muskip_log:N \__kernel_register_log:N
+\cs_new_eq:NN \muskip_log:c \__kernel_register_log:c
+\cs_new_protected:Npn \muskip_log:n
+  { \__msg_log_next: \muskip_show:n }
 %    \end{macrocode}
 % \end{macro}
 %
