In l3flag, rename clear to zero and height to use
There remains the question of whether \flag_raise:n should be
\flag_incr:n despite being expandable, and how to name
\flag_if_raise:nTF in that case.  See #336.

--- a/l3experimental/l3str/l3flag.dtx
+++ b/l3experimental/l3str/l3flag.dtx
@@ -98,16 +98,16 @@
 %   local variables. The \meta{flag} will initially have zero height.
 % \end{function}
 %
-% \begin{function}{\flag_clear:n}
+% \begin{function}{\flag_zero:n}
 %   \begin{syntax}
-%     \cs{flag_clear:n} \Arg{flag name}
+%     \cs{flag_zero:n} \Arg{flag name}
 %   \end{syntax}
 %   The \meta{flag}'s height is set to zero. The assignment is local.
 % \end{function}
 %
-% \begin{function}{\flag_clear_new:n}
+% \begin{function}{\flag_zero_new:n}
 %   \begin{syntax}
-%     \cs{flag_clear_new:n} \Arg{flag name}
+%     \cs{flag_zero_new:n} \Arg{flag name}
 %   \end{syntax}
 %   Ensures that the \meta{flag} exists globally by applying
 %   \cs{flag_new:n} if necessary, then applies \cs{flag_zero:n}, setting
@@ -147,9 +147,9 @@
 %   height, and \texttt{false} if the \meta{flag} has zero height.
 % \end{function}
 %
-% \begin{function}[EXP]{\flag_height:n}
+% \begin{function}[EXP]{\flag_use:n}
 %   \begin{syntax}
-%     \cs{flag_height:n} \Arg{flag name}
+%     \cs{flag_use:n} \Arg{flag name}
 %   \end{syntax}
 %   Expands to the height of the \meta{flag} as an integer denotation.
 % \end{function}
@@ -202,22 +202,22 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\flag_clear:n}
-% \begin{macro}[aux]{\@@_clear:ww}
+% \begin{macro}{\flag_zero:n}
+% \begin{macro}[aux]{\@@_zero:ww}
 %   Undefine control sequences, starting from the |0| flag, upwards,
 %   until reaching an undefined control sequence.  We don't use
 %   \cs{cs_undefine:N} because that would act globally.
 %    \begin{macrocode}
-\cs_new_protected:Npn \flag_clear:n #1
-  { \@@_clear:ww 0 ; #1 \q_stop }
-\cs_new_protected:Npn \@@_clear:ww #1 ; #2 \q_stop
+\cs_new_protected:Npn \flag_zero:n #1
+  { \@@_zero:ww 0 ; #1 \q_stop }
+\cs_new_protected:Npn \@@_zero:ww #1 ; #2 \q_stop
   {
     \if_cs_exist:w flag~#2~#1 \cs_end:
     \else:
       \exp_after:wN \use_none_delimit_by_q_stop:w
     \fi:
     \cs_set_eq:cN { flag~#2~#1 } \tex_undefined:D
-    \exp_after:wN \@@_clear:ww
+    \exp_after:wN \@@_zero:ww
     \__int_value:w \__int_eval:w \c_one + #1 ;
     #2 \q_stop
   }
@@ -225,12 +225,12 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\flag_clear_new:n}
-%   As for other datatypes, clear the \meta{flag} or create a new one,
+% \begin{macro}{\flag_zero_new:n}
+%   As for other datatypes, zero the \meta{flag} or create a new one,
 %   as appropriate.
 %    \begin{macrocode}
-\cs_new_protected:Npn \flag_clear_new:n #1
-  { \flag_if_exist:nTF {#1} { \flag_clear:n } { \flag_new:n } {#1} }
+\cs_new_protected:Npn \flag_zero_new:n #1
+  { \flag_if_exist:nTF {#1} { \flag_zero:n } { \flag_new:n } {#1} }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -241,7 +241,7 @@
 \cs_new_protected:Npn \flag_show:n #1
   {
     \exp_args:Nc \__msg_show_variable:NNNnn { flag~#1 } \cs_if_exist:NTF ? { }
-      { > ~ flag ~ #1 ~ height = \flag_height:n {#1} }
+      { > ~ flag ~ #1 ~ height = \flag_use:n {#1} }
   }
 \cs_new_protected:Npn \flag_log:n
   { \__msg_log_next: \flag_show:n }
@@ -276,12 +276,12 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP]{\flag_height:n}
+% \begin{macro}[EXP]{\flag_use:n}
 % \begin{macro}[EXP, aux]{\@@_height_loop:ww, \@@_height_end:ww}
 %   Extract the value of the flag by going through all of the
 %   control sequences starting from |0|.
 %    \begin{macrocode}
-\cs_new:Npn \flag_height:n #1 { \@@_height_loop:ww 0; #1 \q_stop }
+\cs_new:Npn \flag_use:n #1 { \@@_height_loop:ww 0; #1 \q_stop }
 \cs_new:Npn \@@_height_loop:ww #1 ; #2 \q_stop
   {
     \if_cs_exist:w flag~#2~#1 \cs_end:
@@ -302,7 +302,7 @@
 \cs_new:Npn \flag_raise:n #1
   {
     \cs:w flag~#1 \exp_after:wN \cs_end:
-    \__int_value:w \flag_height:n {#1} ;
+    \__int_value:w \flag_use:n {#1} ;
   }
 %    \end{macrocode}
 % \end{macro}
