--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3str-convert.dtx Copyright (C) 2013-2016 The LaTeX3 Project
+%% File: l3str-convert.dtx Copyright (C) 2013-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -713,7 +713,7 @@
 %   error if it occurred, nothing otherwise.
 %    \begin{macrocode}
 \cs_new:Npn \@@_if_flag_times:nT #1#2
-  { \flag_if_raised:nT {#1} { #2~(x \flag_height:n {#1} ) } }
+  { \flag_if_raised:nT {#1} { #2~(x \flag_use:n {#1} ) } }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -1044,7 +1044,7 @@
   {
     \cs_new_protected:Npn \@@_convert_unescape_:
       {
-        \flag_clear:n { str_byte }
+        \flag_zero:n { str_byte }
         \tl_gset:Nx \g_@@_result_tl
           { \exp_args:No \@@_filter_bytes:n \g_@@_result_tl }
         \@@_if_flag_error:nnx { str_byte } { non-byte } { bytes }
@@ -1139,7 +1139,7 @@
     {
       \cs_new_protected:Npn \@@_convert_encode_:
         {
-          \flag_clear:n { str_error }
+          \flag_zero:n { str_error }
           \@@_convert_gmap_internal:N \@@_encode_native_char:n
           \@@_if_flag_error:nnx { str_error }
             { pdfTeX-native-overflow } { }
@@ -1281,7 +1281,7 @@
         { \tl_use:c { c_@@_encoding_#1_missing_tl } }
         { \q_stop \__prg_break: }
       \__prg_break_point:
-      \flag_clear:n { str_error }
+      \flag_zero:n { str_error }
       \@@_convert_gmap:N \@@_decode_eight_bit_char:N
       \@@_if_flag_error:nnx { str_error } { decode-8-bit } {#1}
     \group_end:
@@ -1335,7 +1335,7 @@
         { \tl_use:c { c_@@_encoding_#1_tl } }
         { \q_stop \__prg_break: } { }
       \__prg_break_point:
-      \flag_clear:n { str_error }
+      \flag_zero:n { str_error }
       \@@_convert_gmap_internal:N \@@_encode_eight_bit_char:n
       \@@_if_flag_error:nnx { str_error } { encode-8-bit } {#1}
     \group_end:
@@ -1478,7 +1478,7 @@
 \cs_new_protected:Npn \@@_convert_unescape_hex:
   {
     \group_begin:
-      \flag_clear:n { str_error }
+      \flag_zero:n { str_error }
       \int_set:Nn \tex_escapechar:D { 92 }
       \tl_gset:Nx \g_@@_result_tl
         {
@@ -1558,8 +1558,8 @@
     \cs_new_protected:cpn { @@_convert_unescape_#2: }
       {
         \group_begin:
-          \flag_clear:n { str_byte }
-          \flag_clear:n { str_error }
+          \flag_zero:n { str_byte }
+          \flag_zero:n { str_error }
           \int_set:Nn \tex_escapechar:D { 92 }
           \tl_gset:Nx \g_@@_result_tl
             {
@@ -1652,8 +1652,8 @@
       \cs_new_protected:Npn \@@_convert_unescape_string:
         {
           \group_begin:
-            \flag_clear:n { str_byte }
-            \flag_clear:n { str_error }
+            \flag_zero:n { str_byte }
+            \flag_zero:n { str_error }
             \int_set:Nn \tex_escapechar:D { 92 }
             \tl_gset:Nx \g_@@_result_tl
               {
@@ -1975,7 +1975,7 @@
 %   }
 %   When decoding a string that is purportedly in the \textsc{utf-8}
 %   encoding, four different errors can occur, signalled by a specific
-%   flag for each (we define those flags using \cs{flag_clear_new:n}
+%   flag for each (we define those flags using \cs{flag_zero_new:n}
 %   rather than \cs{flag_new:n}, because they are shared with other
 %   encoding definition files).
 %   \begin{itemize}
@@ -1996,10 +1996,10 @@
 %   first remind the user what a correct \textsc{utf-8} string should
 %   look like, then add error-specific information.
 %    \begin{macrocode}
-\flag_clear_new:n { str_missing }
-\flag_clear_new:n { str_extra }
-\flag_clear_new:n { str_overlong }
-\flag_clear_new:n { str_overflow }
+\flag_zero_new:n { str_missing }
+\flag_zero_new:n { str_extra }
+\flag_zero_new:n { str_overlong }
+\flag_zero_new:n { str_overflow }
 \__msg_kernel_new:nnnn { str } { utf8-decode }
   {
     Invalid~UTF-8~string: \exp_last_unbraced:Nf \use_none:n
@@ -2115,11 +2115,11 @@
 %    \begin{macrocode}
 \cs_new_protected:cpn { @@_convert_decode_utf8: }
   {
-    \flag_clear:n { str_error }
-    \flag_clear:n { str_missing }
-    \flag_clear:n { str_extra }
-    \flag_clear:n { str_overlong }
-    \flag_clear:n { str_overflow }
+    \flag_zero:n { str_error }
+    \flag_zero:n { str_missing }
+    \flag_zero:n { str_extra }
+    \flag_zero:n { str_overlong }
+    \flag_zero:n { str_overflow }
     \tl_gset:Nx \g_@@_result_tl
       {
         \exp_after:wN \@@_decode_utf_viii_start:N \g_@@_result_tl
@@ -2271,7 +2271,7 @@
     { \@@_encode_utf_xvi_aux:N \@@_output_byte_pair_le:n }
   \cs_new_protected:Npn \@@_encode_utf_xvi_aux:N #1
     {
-      \flag_clear:n { str_error }
+      \flag_zero:n { str_error }
       \cs_set_eq:NN \@@_tmp:w #1
       \@@_convert_gmap_internal:N \@@_encode_utf_xvi_char:n
       \@@_if_flag_error:nnx { str_error } { utf16-encode } { }
@@ -2314,9 +2314,9 @@
 %   an unexpected trail surrogate, and a string containing an odd number
 %   of bytes.
 %    \begin{macrocode}
-  \flag_clear_new:n { str_missing }
-  \flag_clear_new:n { str_extra }
-  \flag_clear_new:n { str_end }
+  \flag_zero_new:n { str_missing }
+  \flag_zero_new:n { str_extra }
+  \flag_zero_new:n { str_end }
   \__msg_kernel_new:nnnn { str } { utf16-encode }
     { Unicode~string~cannot~be~expressed~in~UTF-16:~surrogate. }
     {
@@ -2409,10 +2409,10 @@
     }
   \cs_new_protected:Npn \@@_decode_utf_xvi:Nw #1#2 \s__stop
     {
-      \flag_clear:n { str_error }
-      \flag_clear:n { str_missing }
-      \flag_clear:n { str_extra }
-      \flag_clear:n { str_end }
+      \flag_zero:n { str_error }
+      \flag_zero:n { str_missing }
+      \flag_zero:n { str_extra }
+      \flag_zero:n { str_end }
       \cs_set:Npn \@@_tmp:w ##1 ##2 { ` ## #1 }
       \tl_gset:Nx \g_@@_result_tl
         {
@@ -2613,8 +2613,8 @@
 %   happens if the encoding was in fact not \textsc{utf-32}, because
 %   most arbitrary strings are not valid in \textsc{utf-32}.
 %    \begin{macrocode}
-  \flag_clear_new:n { str_overflow }
-  \flag_clear_new:n { str_end }
+  \flag_zero_new:n { str_overflow }
+  \flag_zero_new:n { str_end }
   \__msg_kernel_new:nnnn { str } { utf32-decode }
     {
       Invalid~UTF-32~string: \exp_last_unbraced:Nf \use_none:n
@@ -2696,9 +2696,9 @@
     }
   \cs_new_protected:Npn \@@_decode_utf_xxxii:Nw #1#2 \s__stop
     {
-      \flag_clear:n { str_overflow }
-      \flag_clear:n { str_end }
-      \flag_clear:n { str_error }
+      \flag_zero:n { str_overflow }
+      \flag_zero:n { str_end }
+      \flag_zero:n { str_error }
       \cs_set:Npn \@@_tmp:w ##1 ##2 { ` ## #1 }
       \tl_gset:Nx \g_@@_result_tl
         {
