Move l3flag to l3kernel (see #336)
All tests pass so I probably didn't break things.  I don't close
the issue yet because I want to move l3fp-traps to using l3flag too.

--- a/l3experimental/l3str/l3regex.dtx
+++ b/l3experimental/l3str/l3regex.dtx
@@ -740,7 +740,7 @@
 %<*package>
 \ProvidesExplPackage
   {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
-\RequirePackage{l3tl-build, l3tl-analysis, l3flag, l3str-convert}
+\RequirePackage{l3tl-build, l3tl-analysis, l3str-convert}
 %</package>
 %    \end{macrocode}
 %
