Move l3fp-traps to using l3flag.  See #336
This almost closes the issue, with the caveat that a
naming question is still open.

--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -656,57 +656,27 @@
 %   a computation is not exact, in other words, almost always.  At the
 %   moment, this exception is entirely ignored in \LaTeX3.
 % \end{itemize}
-% To each exception is associated a \enquote{flag}, which can be either
-% \emph{on} or \emph{off}.  By default, the \enquote{invalid operation}
-% exception triggers an (expandable) error, and raises the corresponding
-% flag.  Other exceptions only raise the corresponding flag.  The state
-% of the flag can be tested
-% and modified.  The behaviour when an exception occurs can be modified
-% (using \cs{fp_trap:nn}) to either produce an error and turn the flag
-% on, or only turn the flag on, or do nothing at all.
+% To each exception we associate a \enquote{flag}: \texttt{fp_overflow},
+% \texttt{fp_underflow}, \texttt{fp_invalid_operation} and
+% \texttt{fp_division_by_zero}.  The state of these flags can be tested
+% and modified with commands from \pkg{l3flag}
 %
-% \begin{function}[EXP, pTF, added = 2012-08-08, tested = m3fp-traps001]
-%   {\fp_if_flag_on:n}
-%   \begin{syntax}
-%     \cs{fp_if_flag_on_p:n} \Arg{exception}
-%     \cs{fp_if_flag_on:nTF} \Arg{exception} \Arg{true code} \Arg{false code}
-%   \end{syntax}
-%   Tests if the flag for the \meta{exception} is on, which normally
-%   means the given \meta{exception} has occurred.
-%   \emph{This function is experimental, and may be altered or removed.}
-% \end{function}
+% By default, the \enquote{invalid operation} exception triggers an
+% (expandable) error, and raises the corresponding flag.  Other
+% exceptions raise the corresponding flag but do not trigger an error.
+% The behaviour when an exception occurs can be modified (using
+% \cs{fp_trap:nn}) to either produce an error and raise the flag, or
+% only raise the flag, or do nothing at all.
 %
-% \begin{function}[added = 2012-08-08, tested = m3fp-traps001]
-%   {\fp_flag_off:n}
-%   \begin{syntax}
-%     \cs{fp_flag_off:n} \Arg{exception}
-%   \end{syntax}
-%   Locally turns off the flag which indicates whether the
-%   \meta{exception} has occurred.
-%   \emph{This function is experimental, and may be altered or removed.}
-% \end{function}
-%
-% \begin{function}[EXP, added = 2012-08-08, tested = m3fp-traps001]
-%   {\fp_flag_on:n}
-%   \begin{syntax}
-%     \cs{fp_flag_on:n} \Arg{exception}
-%   \end{syntax}
-%   Locally turns on the flag to indicate (or pretend) that the
-%   \meta{exception} has occurred.  Note that this function is
-%   expandable: it is used internally by \pkg{l3fp} to signal when
-%   exceptions do occur.
-%   \emph{This function is experimental, and may be altered or removed.}
-% \end{function}
-%
-% \begin{function}[added = 2012-07-19, updated = 2012-08-08,
+% \begin{function}[added = 2012-07-19, updated = 2017-02-13,
 %   tested = m3fp-traps001]{\fp_trap:nn}
 %   \begin{syntax}
 %     \cs{fp_trap:nn} \Arg{exception} \Arg{trap type}
 %   \end{syntax}
-%   All occurrences of the \meta{exception} (\texttt{invalid_operation},
-%   \texttt{division_by_zero}, \texttt{overflow}, or \texttt{underflow})
-%   within the current group are treated as \meta{trap type}, which can
-%   be
+%   All occurrences of the \meta{exception} (\texttt{overflow},
+%   \texttt{underflow}, \texttt{invalid_operation} or
+%   \texttt{division_by_zero}) within the current
+%   group are treated as \meta{trap type}, which can be
 %   \begin{itemize}
 %     \item \texttt{none}: the \meta{exception} will be entirely
 %       ignored, and leave no trace;
@@ -718,6 +688,16 @@
 %   \end{itemize}
 %   \emph{This function is experimental, and may be altered or removed.}
 % \end{function}
+%
+% \begin{variable}
+%   {
+%     flag fp_overflow,
+%     flag fp_underflow,
+%     flag fp_invalid_operation,
+%     flag fp_division_by_zero
+%   }
+%   Flags denoting the occurrence of various floating-point exceptions.
+% \end{variable}
 %
 % \section{Viewing floating points}
 %
