Rename \flag_zero:n to \flag_clear:n (see #336)

--- a/l3kernel/l3flag.dtx
+++ b/l3kernel/l3flag.dtx
@@ -95,19 +95,19 @@
 %   local variables. The \meta{flag} will initially have zero height.
 % \end{function}
 %
-% \begin{function}{\flag_zero:n}
+% \begin{function}{\flag_clear:n}
 %   \begin{syntax}
-%     \cs{flag_zero:n} \Arg{flag name}
+%     \cs{flag_clear:n} \Arg{flag name}
 %   \end{syntax}
 %   The \meta{flag}'s height is set to zero. The assignment is local.
 % \end{function}
 %
-% \begin{function}{\flag_zero_new:n}
+% \begin{function}{\flag_clear_new:n}
 %   \begin{syntax}
-%     \cs{flag_zero_new:n} \Arg{flag name}
+%     \cs{flag_clear_new:n} \Arg{flag name}
 %   \end{syntax}
 %   Ensures that the \meta{flag} exists globally by applying
-%   \cs{flag_new:n} if necessary, then applies \cs{flag_zero:n}, setting
+%   \cs{flag_new:n} if necessary, then applies \cs{flag_clear:n}, setting
 %   the height to zero locally.
 % \end{function}
 %
@@ -196,18 +196,18 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}{\flag_zero:n}
-% \begin{macro}[aux]{\@@_zero:wn}
+% \begin{macro}{\flag_clear:n}
+% \begin{macro}[aux]{\@@_clear:wn}
 %   Undefine control sequences, starting from the |0| flag, upwards,
 %   until reaching an undefined control sequence.  We don't use
 %   \cs{cs_undefine:c} because that would act globally.
 %    \begin{macrocode}
-\cs_new_protected:Npn \flag_zero:n { \@@_zero:wn 0 ; }
-\cs_new_protected:Npn \@@_zero:wn #1 ; #2
+\cs_new_protected:Npn \flag_clear:n { \@@_clear:wn 0 ; }
+\cs_new_protected:Npn \@@_clear:wn #1 ; #2
   {
     \if_cs_exist:w flag~#2~#1 \cs_end:
       \cs_set_eq:cN { flag~#2~#1 } \tex_undefined:D
-      \exp_after:wN \@@_zero:wn
+      \exp_after:wN \@@_clear:wn
       \__int_value:w \__int_eval:w \c_one + #1
     \else:
       \use_i:nnn
@@ -218,12 +218,12 @@
 % \end{macro}
 % \end{macro}
 %
-% \begin{macro}{\flag_zero_new:n}
-%   As for other datatypes, zero the \meta{flag} or create a new one,
+% \begin{macro}{\flag_clear_new:n}
+%   As for other datatypes, clear the \meta{flag} or create a new one,
 %   as appropriate.
 %    \begin{macrocode}
-\cs_new_protected:Npn \flag_zero_new:n #1
-  { \flag_if_exist:nTF {#1} { \flag_zero:n } { \flag_new:n } {#1} }
+\cs_new_protected:Npn \flag_clear_new:n #1
+  { \flag_if_exist:nTF {#1} { \flag_clear:n } { \flag_new:n } {#1} }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -256,7 +256,7 @@
 % \end{macro}
 %
 % \begin{macro}[EXP, pTF]{\flag_if_raised:n}
-%   Test if the flag is non-zero, by checking the |0| control sequence.
+%   Test if the flag has a non-zero height, by checking the |0| control sequence.
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \flag_if_raised:n #1 { p , T , F , TF }
   {
@@ -310,10 +310,10 @@
 %    \begin{macrocode}
 %<*package>
 \tex_ifodd:D \l@expl@check@declarations@bool
-  \cs_set_protected:Npn \flag_zero:n #1
+  \cs_set_protected:Npn \flag_clear:n #1
     {
       \exp_args:Nc \__chk_if_exist_var:N { flag~#1 }
-      \@@_zero:wn 0 ; {#1}
+      \@@_clear:wn 0 ; {#1}
     }
   \cs_set:Npn \@@_chk_exist:n #1
     {
