--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -2205,12 +2205,17 @@
 %   show command is called, rather than in the group created by
 %   \cs{iow_wrap:nnnN}.  This is only important for expressions
 %   involving the \tn{currentgrouplevel} or \tn{currentgrouptype}.
-%   This does not lead to double expansion because the
-%   \texttt{x}-expansion of |#1| |{#2}| is a string in all cases where
-%   \cs{@@_show_wrap:Nn} is used.
+%   On the other hand we want the expression to be converted to a string
+%   with the usual escape character, hence within the wrapping code.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_show_wrap:Nn #1#2
-  { \exp_args:Nx \@@_show_wrap:n { > ~ \tl_to_str:n {#2} = #1 {#2} } }
+  {
+    \exp_args:Nx \@@_show_wrap:n
+      {
+        > ~ \exp_not:n { \tl_to_str:n {#2} } =
+        \exp_not:N \tl_to_str:n { #1 {#2} }
+      }
+  }
 %    \end{macrocode}
 % \end{macro}
 %
