Update error message for \Renew... to reflect true behaviour
This should have been fixed a long time ago: the message claimed
the definition was taking place, but it is in fact ignored.

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -4046,7 +4046,7 @@
   {
     You~have~used~#2~
     with~a~command~that~was~never~defined. \\
-    A~new~command~'#1'~will~be~created.
+    LaTeX~will~ignore~this~entire~definition.
   }
 \__msg_kernel_new:nnnn { xparse } { environment-already-defined }
   { Environment~'#1'~already~defined! }
@@ -4060,7 +4060,7 @@
   {
     You~have~used~\RenewDocumentEnvironment
     with~an~environment~that~was~never~defined. \\
-    A~new~environment~'#1'~will~be~created.
+    LaTeX~will~ignore~this~entire~definition.
   }
 \__msg_kernel_new:nnnn { xparse } { expandable-ending-optional }
   {
